[package]
name = "plecto-host"
description = "Plecto's wasmtime embedding host: loads, sandboxes, and runs plecto:filter WASM components (the extension plane)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# No libtest `#[bench]` fns live in the lib; disabling its bench harness lets `cargo bench` run
# ONLY the criterion targets (which alone understand `--save-baseline` for the CI regression gate).
[lib]
bench = false

[features]
# Experimental streaming body filter (direction_0003 gates 1+2). OFF by default: the shipped
# plecto:filter@0.1.0 path and the default build are untouched. When on, it pulls a minimally-sliced
# WASI (wasi:http/proxy interfaces — no fs/sockets/env) and drives an async `stream<u8>` body filter
# on wasmtime's component-model-async. Building the fixture also needs `rustup target add
# wasm32-wasip2`. Stays out of the default build until wasm32-wasip3 reaches Tier 2.
streaming-body = ["dep:wasmtime-wasi", "wasmtime/component-model-async"]
# Experimental outbound HTTP capability for filters (ADR 000036): lends `wasi:http/outgoing-handler`
# through the same deny-by-default Linker, gated per-filter by an operator allowlist + an SSRF guard
# (IP-pinned connect) + resource bounds. OFF by default — the shipped header-only/sync world and its
# supply chain are untouched until the M3 wasi:http convergence gate (ADR 000020). When on, it pulls
# wasmtime-wasi-http + a minimal wasi:io slice and drives outbound-using guests on a tokio runtime
# (pollster cannot service the blocking outbound I/O). Building the fixture needs `wasm32-wasip2`.
outbound-http = [
    "dep:wasmtime-wasi-http",
    "dep:wasmtime-wasi",
    "dep:ipnet",
    "dep:tokio",
    "dep:hyper",
    "dep:http-body-util",
    "dep:bytes",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:webpki-roots",
    "wasmtime/component-model-async",
]
# Marker feature for the `mem-probe` example: swaps in dhat's global allocator to report host-heap
# peak (the lifted body copy). No effect on the lib or the default build; dhat is a dev-dependency,
# so it is never linked into a production build. Run: `cargo run -p plecto-host --example mem-probe
# --features dhat-heap`.
dhat-heap = []

[dependencies]
wasmtime = { workspace = true }
# Streaming-body / outbound-http only: a MINIMAL WASI slice (proxy interfaces — no fs/sockets/env) for
# guests that, unlike the no-WASI header-only filters, import wasi:io. Optional, so the default build
# never sees it.
wasmtime-wasi = { version = "46.0.1", optional = true }
# outbound-http only: the standard `wasi:http/outgoing-handler` host implementation. We take its
# WasiHttpHooks::send_request seam but OWN the connector (allowlist + DNS + IP-pinned connect), so the
# built-in one is only a source of types/building-blocks. Optional — absent from the default build.
wasmtime-wasi-http = { version = "46.0.1", optional = true }
# outbound-http only: CIDR parsing/containment for the operator's per-filter `allow_private` opt-in
# ranges (the SSRF guard's explicit deny ranges are hand-written octet predicates, not this).
ipnet = { workspace = true, optional = true }
# outbound-http only: a real reactor for the blocking outbound socket I/O and the per-call
# `tokio::time::timeout` deadline (epoch cannot interrupt a guest blocked inside a host call —
# ADR 000006 / 000036). The default build keeps the no-reactor pollster executor.
tokio = { version = "1", optional = true, features = ["rt", "net", "time", "io-util", "macros", "sync"] }
# outbound-http only: the SSRF-guarded connector we own instead of wasi-http's default one — hyper
# client + rustls (ring, matching the workspace TLS stack) + webpki roots + body-size capping. All
# optional; the default build links none of them.
hyper = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
webpki-roots = { version = "0.26", optional = true }
# M3 Stage 1 (ADR 000021): a minimal `block_on` to drive wasmtime's now-async `call_async` /
# `instantiate_async` from the host's still-sync public API. The guest runs to completion on a
# fiber without suspending (epoch is trap-mode, host-API imports never block), so a no-reactor
# executor suffices. The server-side spawn_blocking removal (true async) is Stage 2.
pollster = "0.4"
anyhow = { workspace = true }
redb = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
sigstore = { workspace = true }
# SBOM↔component binding (ADR 000006 hardening): parse the SBOM in-toto statement and
# verify its subject digest is sha256(component), so a validly-signed but UNRELATED SBOM
# cannot be paired with a component (review f000003 #1).
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
# opentelemetry: OTel data-model types only (ADR 000009 observability stage; no-tokio).
opentelemetry = { workspace = true }

# build.rs builds the filter-hello guest (wasm32-unknown-unknown) and wraps the
# core module into a Component Model component, hermetically (no external CLI).
[build-dependencies]
wit-component = "0.252"

[dev-dependencies]
# unique on-disk paths for the redb backend's unit tests
tempfile = "3"
# criterion: in-process WASM micro-benchmarks (cold load, per-request pooled vs fresh instance).
# default-features = false drops plotters/rayon — we only need the harness + baseline comparison.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# dhat: host-heap profiler for the `mem-probe` example (feature `dhat-heap`). Dev-only, so it is
# never linked into a production build of the lib.
dhat = "0.3"

[[bench]]
name = "wasm"
harness = false

# mem-probe: Stage 1 mechanistic probe for the body-tax memory investigation
# (docs/plans/performance_evolution_001.md). Drives the host's on-request-body hook directly (no
# server / proxy / load generator) to isolate the host↔guest body copy (hypothesis A) from the
# pooling allocator's residency (hypothesis B). Source under bench/ with the other harnesses.
[[example]]
name = "mem-probe"
path = "../../../bench/harnesses/mem-probe/main.rs"
