[package]
name = "plecto-host"
description = "Plecto's wasmtime embedding host: loads, sandboxes, and runs plecto:filter WASM components (the extension plane)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plecto-host"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# No libtest `#[bench]` fns live in the lib; disabling its bench harness lets `cargo bench` run
# ONLY the criterion targets (which alone understand `--save-baseline` for the CI regression gate).
[lib]
bench = false

[lints]
workspace = true

[features]
# Gates `test_support` (the fixture loaders: filter-hello/apikey/quickstart/noop components,
# TestSigner, bound_sbom) and build.rs's compilation of those guest components. OFF by default, so
# a plain production build of this crate — or of `plecto-control`/`plecto-server`, which depend on
# it as a normal (non-dev) dependency — never needs `wasm32-unknown-unknown` or the guest sources
# under `examples/filters/` / `bench/filters/`. This crate's own `[dev-dependencies]` turn it on for
# `cargo test`/`--examples`/`cargo bench`; dependent crates do the same in their own dev-dependencies.
test-support = []
# Polyglot conformance (tests/polyglot.rs): runs the SAME contract assertions against the non-Rust
# example filters (MoonBit / JS / C — all zero-WASI components built OUTSIDE cargo by their own
# toolchains, see examples/filters/filter-hello-*/build.sh). OFF by default so `cargo test` never
# requires those toolchains; CI's polyglot-guests job builds the components first, then enables this.
polyglot-conformance = []
# Experimental streaming body filter (direction_0003 gates 1+2). OFF by default: the shipped
# plecto:filter@0.1.0 path and the default build are untouched. When on, it pulls a minimally-sliced
# WASI (wasi:http/proxy interfaces — no fs/sockets/env) and drives an async `stream<u8>` body filter
# on wasmtime's component-model-async. Building the fixture also needs `rustup target add
# wasm32-wasip2`. Stays out of the default build until wasm32-wasip3 reaches Tier 2.
streaming-body = ["dep:wasmtime-wasi", "wasmtime/component-model-async"]
# Experimental outbound HTTP capability for filters (ADR 000036): lends `wasi:http/outgoing-handler`
# through the same deny-by-default Linker, gated per-filter by an operator allowlist + an SSRF guard
# (IP-pinned connect) + resource bounds. OFF by default — the shipped header-only/sync world and its
# supply chain are untouched until the M3 wasi:http convergence gate (ADR 000020). When on, it pulls
# wasmtime-wasi-http + a minimal wasi:io slice and drives outbound-using guests on a tokio runtime
# (pollster cannot service the blocking outbound I/O). Building the fixture needs `wasm32-wasip2`.
outbound-http = [
    "dep:wasmtime-wasi-http",
    "dep:wasmtime-wasi",
    "dep:ipnet",
    "dep:tokio",
    "dep:hyper",
    "dep:http-body-util",
    "dep:bytes",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:webpki-roots",
    "wasmtime/component-model-async",
]
# Experimental outbound TCP capability for filters (ADR 000060): lends the `wasi:sockets` TCP-connect
# vocabulary (network / instance-network / tcp-create-socket / tcp, plus a host-vetted ip-name-lookup)
# through the same deny-by-default Linker, gated per-filter by an operator allowlist + the shared SSRF
# floor (`outbound.rs::classify`) + an IP pin + resource bounds. UDP and listen are never lent. OFF by
# default — same quarantine rule as outbound-http. Building the fixture needs `wasm32-wasip2`.
outbound-tcp = [
    "dep:wasmtime-wasi",
    "dep:ipnet",
    "dep:tokio",
    "wasmtime/component-model-async",
]
# Fat guest (ADR 000063): lends a minimal WASI slice — wasi:io / wasi:clocks (real monotonic +
# wall) / wasi:random (real CSPRNG) / wasi:cli (env = [], args = [], exit; stdout/stderr bridged
# into this filter's host-log, ADR 000063 Decision 2) — to filters that declare `wasi = "minimal"`
# in the manifest. No filesystem, no sockets: those stay separate, deny-by-default capabilities
# (outbound-http / outbound-tcp). OFF by default — the shipped zero-WASI guests (Tier A, ADR
# 000055) are untouched; this unlocks "fat" guests (TinyGo/Go and other WASI-runtime-assuming
# toolchains, Tier B) without widening what a zero-WASI filter can link. Shares the exact same
# minimal-WASI base wiring (`add_to_linker_proxy_interfaces_async` + `add_cli_runtime`) that
# outbound-http/outbound-tcp already pull in ad hoc — this feature is that wiring's formalization,
# independently gated. Building the fixture needs `wasm32-wasip2` (Rust) or TinyGo (Go).
fat-guest = [
    "dep:wasmtime-wasi",
    "dep:bytes",
    "dep:tokio",
    "wasmtime/component-model-async",
]
# Marker feature for the `mem-probe` example: swaps in dhat's global allocator to report host-heap
# peak (the lifted body copy). No effect on the lib or the default build; dhat is a dev-dependency,
# so it is never linked into a production build. Run: `cargo run -p plecto-host --example mem-probe
# --features dhat-heap`.
dhat-heap = []
# Marker for the instruction-count bench target (benches/wasm_inst.rs): running it needs valgrind
# plus a version-matched gungraun-runner on PATH, so the target is skipped by a plain `cargo bench`
# (CI included) and opted into explicitly:
#   cargo bench -p plecto-host --features instruction-bench --bench wasm_inst
instruction-bench = []

[dependencies]
wasmtime = { workspace = true }
# Streaming-body / outbound-http only: a MINIMAL WASI slice (proxy interfaces — no fs/sockets/env) for
# guests that, unlike the no-WASI header-only filters, import wasi:io. Optional, so the default build
# never sees it.
wasmtime-wasi = { workspace = true, optional = true }
# outbound-http only: the standard `wasi:http/outgoing-handler` host implementation. We take its
# WasiHttpHooks::send_request seam but OWN the connector (allowlist + DNS + IP-pinned connect), so the
# built-in one is only a source of types/building-blocks. Optional — absent from the default build.
wasmtime-wasi-http = { workspace = true, optional = true }
# outbound-http only: CIDR parsing/containment for the operator's per-filter `allow_private` opt-in
# ranges (the SSRF guard's explicit deny ranges are hand-written octet predicates, not this).
ipnet = { workspace = true, optional = true }
# outbound-http only: a real reactor for the blocking outbound socket I/O and the per-call
# `tokio::time::timeout` deadline (epoch cannot interrupt a guest blocked inside a host call —
# ADR 000006 / 000036). The default build keeps the no-reactor pollster executor.
tokio = { version = "1", optional = true, features = ["rt", "net", "time", "io-util", "macros", "sync"] }
# outbound-http only: the SSRF-guarded connector we own instead of wasi-http's default one — hyper
# client + rustls (aws_lc_rs, matching the workspace TLS stack, ADR 000051) + webpki roots +
# body-size capping. All optional; the default build links none of them.
hyper = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
# M3 Stage 1 (ADR 000021): a minimal `block_on` to drive wasmtime's now-async `call_async` /
# `instantiate_async` from the host's still-sync public API. The guest runs to completion on a
# fiber without suspending (epoch is trap-mode, host-API imports never block), so a no-reactor
# executor suffices. The server-side spawn_blocking removal (true async) is Stage 2.
pollster = "0.4"
anyhow = { workspace = true }
thiserror = { workspace = true }
redb = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
sigstore = { workspace = true }
# DevSigner (ADR 000065): zeroize-on-drop wrapper for the persisted dev-key private-key PEM,
# already resolved transitively via sigstore.
zeroize = { workspace = true }
# SBOM↔component binding (ADR 000006 hardening): parse the SBOM in-toto statement and
# verify its subject digest is sha256(component), so a validly-signed but UNRELATED SBOM
# cannot be paired with a component (review f000003 #1).
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
# opentelemetry: OTel data-model types only (ADR 000009 observability stage; no-tokio).
opentelemetry = { workspace = true }

# build.rs builds the filter-hello guest (wasm32-unknown-unknown) and wraps the
# core module into a Component Model component, hermetically (no external CLI).
[build-dependencies]
wit-component = "0.252"

[dev-dependencies]
# Self dev-dependency: turns on `test-support` for THIS crate's own tests/benches/examples only.
# Cargo permits a crate to dev-depend on itself to activate a feature just for `cargo test`
# (resolver "3" keeps the feature from leaking into a plain `cargo build` of a dependent crate).
plecto-host = { path = ".", features = ["test-support"] }
# unique on-disk paths for the redb backend's unit tests
tempfile = "3"
# criterion: in-process WASM micro-benchmarks (cold load, per-request pooled vs fresh instance).
# default-features = false drops plotters/rayon — we only need the harness + baseline comparison.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# gungraun (the renamed iai-callgrind): callgrind-based instruction counts for the SAME hot calls
# criterion times above (benches/wasm_inst.rs). Instruction counts are invariant to CPU frequency
# / thermal / neighbour load, so the "did the contract surface get more expensive?" judgement is
# deterministic where wall-clock drifts double digits on an unpinned host. Dev-only + feature-gated
# (`instruction-bench`), so neither production builds nor a valgrind-less `cargo bench` see it.
gungraun = "0.19"
# dhat: host-heap profiler for the `mem-probe` example (feature `dhat-heap`). Dev-only, so it is
# never linked into a production build of the lib.
dhat = "0.3"
# OTLP decode ORACLE for the hand-written exporter (ADR 000040): the official generated proto
# types verify the encoder's bytes in round-trip tests. `gen-tonic-messages` pulls prost only —
# no tonic/gRPC stack. Dev-only, never linked into a production build.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14"
# filter-jwt host tests (ADR 000070): mint ES256/RS256 test tokens and hand-build an alg=none
# token (jsonwebtoken refuses to encode one) to exercise the alg-allowlist gate directly.
# `aws_lc_rs`, not `rust_crypto`: the latter's RSA path goes through RustCrypto's `rsa` crate,
# which is still open on RUSTSEC-2023-0071 (Marvin Attack timing side-channel) with no patched
# version — `deny.toml` blocks it on sight and clears advisories by replacing the crate, not by
# an ignore-list entry.
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
serde = { workspace = true, features = ["derive"] }
base64 = "0.22"

[[bench]]
name = "wasm"
harness = false

# Instruction-count twin of the `wasm` bench (wall-clock criterion stays authoritative for "how
# long", this one for "how much work"). required-features keeps it out of a plain `cargo bench`.
[[bench]]
name = "wasm_inst"
harness = false
required-features = ["instruction-bench"]

# mem-probe: Stage 1 mechanistic probe for the body-tax memory investigation
# (docs/plans/performance_evolution_001.md). Drives the host's on-request-body hook directly (no
# server / proxy / load generator) to isolate the host↔guest body copy (hypothesis A) from the
# pooling allocator's residency (hypothesis B). Source under bench/ with the other harnesses.
[[example]]
name = "mem-probe"
path = "../../../bench/harnesses/mem-probe/main.rs"
