[package]
name = "plecto"
description = "Plecto Proxy — a self-hostable L7 reverse proxy / API gateway extended with sandboxed WASM Component Model filters. This crate is the `plecto` binary and operator CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plecto"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
# `templates/filter-template/` is a vendored guest crate `new_filter.rs` embeds via
# `include_str!` (its manifest is named `Cargo.toml.template` because cargo package silently
# drops any directory containing a literal nested `Cargo.toml`) — same rationale as the WIT
# vendoring in plecto-host; `scripts/check_wit_vendoring.py` (CI) guards it against drift.
include = ["src/**", "tests/**", "templates/**", "CONTEXT.md"]

# The `plecto` binary: the fast-path server (ADR 000013) plus the operator CLI —
# validate / conformance / new-filter / dev / schema (Filter Dev Kit, ADR 000065). The data
# plane, control plane, and wasmtime host live in the library crates (plecto-server /
# plecto-control / plecto-host); this crate is the thin end-user entry point over them, so
# `cargo install plecto` is the first-class source-install path.

[[bin]]
name = "plecto"
path = "src/main.rs"

[lints]
workspace = true

[features]
# --- Named runtime capability profiles (ADR 000079), forwarded down the crate stack
# (plecto-server → plecto-control → plecto-host). OFF by default: the unsuffixed release
# artifact is the `minimal` profile. Compile-time inclusion is NOT a runtime grant — even a
# capabilities binary lends nothing to a filter unless the manifest declares it per filter.
outbound-http = ["plecto-server/outbound-http"]
outbound-tcp = ["plecto-server/outbound-tcp"]
fat-guest = ["plecto-server/fat-guest"]
capabilities = ["outbound-http", "outbound-tcp", "fat-guest"]

[dependencies]
plecto-server = { workspace = true }
plecto-control = { workspace = true }
# libc: `plecto dev`'s self-SIGHUP (reusing the exact serve reload path, ADR 000065). unix-only
# code path; the crate is a no-op elsewhere.
libc = "0.2"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# serde_json: `plecto conformance --json` (ADR 000065) — machine-readable output for CI.
serde_json = { workspace = true }
# zeroize: `plecto package` reads the operator's private-key PEM into a `Zeroizing` buffer —
# the same discipline the dev-key path applies to key material.
zeroize = { workspace = true }
# tracing-subscriber: the binary's JSON log + access-log formatter (ADR 000009 Stage A). Only
# this crate's `main` installs a subscriber; the library crates stay subscriber-free.
tracing-subscriber = { workspace = true }
# --- Filter Dev Kit (ADR 000065): `plecto dev` / `plecto new-filter` inner loop. ---
# notify(-debouncer-mini): watch a filter's src/ for changes and debounce the rebuild trigger
# (~300ms). 8.x is the current stable line; 9.0 was still pre-release as of the ADR's research.
notify-debouncer-mini = "0.7"
# toml_edit: format-preserving rewrite of a dev manifest's `[[filter]].digest` after every
# rebuild — a plain parse+reserialize (via `toml`/serde) would blow away the operator's own
# comments and layout in a file `plecto dev` shares write access to with a human.
toml_edit = "0.22"
# wit-component: wrap a rebuilt wasm32-unknown-unknown core module into a Component at runtime —
# the same `ComponentEncoder` recipe `crates/host/build.rs` already uses at BUILD time (ADR
# 000010), needed here because `plecto dev` componentizes on every file-watch trigger, not once.
wit-component = "0.254"

[dev-dependencies]
# the host's test_support (TestSigner / bound_sbom / filter_hello_component) for the binary
# E2E fixtures (tests/binary_signals.rs / tests/listen.rs).
plecto-host = { path = "../host", features = ["test-support"] }
tempfile = "3"
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio-rustls = { workspace = true }
# rcgen: generate a fresh self-signed cert for the `[listen]` TLS E2E (ring backend, no
# aws-lc-rs/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
