[package]
name = "plecto-server"
description = "Plecto's fast path: an L7 reverse proxy / API gateway data plane (HTTP/1.1, HTTP/2, HTTP/3, TLS, routing, load balancing)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# The M2 fast path: a listener that drives requests through the control plane's routed filter
# chains and forwards to upstreams — HTTP/1.1 + HTTP/2 over TCP and HTTP/3 over QUIC (ADR 000013 /
# 000014 / 000015 / 000016). lib + bin + the runnable demo.
[lib]
name = "plecto_server"
path = "src/lib.rs"

[[bin]]
name = "plecto"
path = "src/main.rs"

# Runnable, use-case-focused demos live at the workspace-level `examples/` dir (a sibling of
# `crates/`), each its own `examples/<name>/main.rs`, but built as examples of this package so they
# can use plecto-server + its dev-dependencies. Run with `cargo run -p plecto-server --example <name>`.
[[example]]
name = "load-balancing"
path = "../../examples/load-balancing/main.rs"

[[example]]
name = "tls-http"
path = "../../examples/tls-http/main.rs"

[[example]]
name = "filter-chain"
path = "../../examples/filter-chain/main.rs"

# The real-world WASM filter showcase: a signed API-key auth component gating a route.
[[example]]
name = "wasm-auth"
path = "../../examples/wasm-auth/main.rs"

# Benchmark harness: baseline vs pooled vs on-demand filter on one backend (see performance/).
[[example]]
name = "wasm-bench"
path = "../../examples/wasm-bench/main.rs"

[[example]]
name = "hot-reload"
path = "../../examples/hot-reload/main.rs"

# Benchmark harness: host rate-limit (ADR 000026) + request-body hook (ADR 000025) on one filter.
[[example]]
name = "edge-bench"
path = "../../examples/edge-bench/main.rs"

[dependencies]
plecto-control = { path = "../control" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# tokio-rustls: wrap each accepted TCP stream in a TLS handshake before handing it to hyper
# (ADR 000014). The ServerConfig is built by control; this is just the async acceptor.
tokio-rustls = { workspace = true }
# quinn + h3 + h3-quinn: the independent QUIC/UDP listener that terminates HTTP/3 (ADR 000016).
# The QUIC ServerConfig's rustls (TLS1.3, ALPN h3) is built by control, sharing the cert resolver.
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }

[dev-dependencies]
# the host's test_support (TestSigner / bound_sbom / filter_hello_component) for E2E fixtures,
# and a TOML writer for the on-disk manifest a test points the server at.
plecto-host = { path = "../host" }
tempfile = "3"
# rcgen: generate a fresh self-signed cert for the TLS E2E (ring backend, no aws-lc-rs/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
