[package]
name = "plecto-server"
description = "Plecto's fast path: an L7 reverse proxy / API gateway data plane (HTTP/1.1, HTTP/2, HTTP/3, TLS, routing, load balancing)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# The M2 fast path: a listener that drives requests through the control plane's routed filter
# chains and forwards to upstreams — HTTP/1.1 + HTTP/2 over TCP and HTTP/3 over QUIC (ADR 000013 /
# 000014 / 000015 / 000016). lib + bin + the runnable demo.
[lib]
name = "plecto_server"
path = "src/lib.rs"

[[bin]]
name = "plecto"
path = "src/main.rs"

# Runnable, use-case-focused demos live at the workspace-level `examples/` dir (a sibling of
# `crates/`), each its own `examples/<name>/main.rs`, but built as examples of this package so they
# can use plecto-server + its dev-dependencies. Run with `cargo run -p plecto-server --example <name>`.
# See examples/README.md for the guided path (start with `quickstart`).
[[example]]
name = "quickstart"
path = "../../examples/quickstart/main.rs"

[[example]]
name = "load-balancing"
path = "../../examples/load-balancing/main.rs"

[[example]]
name = "tls-http"
path = "../../examples/tls-http/main.rs"

[[example]]
name = "filter-chain"
path = "../../examples/filter-chain/main.rs"

# The real-world WASM filter showcase: a signed API-key auth component gating a route.
[[example]]
name = "wasm-auth"
path = "../../examples/wasm-auth/main.rs"

# Benchmark harness: baseline vs pooled vs on-demand filter on one backend (see performance/).
[[example]]
name = "wasm-bench"
# A benchmark harness, not a learning example — it lives under bench/ (see performance/README.md).
path = "../../../bench/harnesses/wasm-bench/main.rs"

[[example]]
name = "hot-reload"
path = "../../examples/hot-reload/main.rs"

# Benchmark harness: host rate-limit (ADR 000026) + request-body hook (ADR 000025) on one filter.
[[example]]
name = "edge-bench"
# A benchmark harness, not a learning example — it lives under bench/ (see performance/README.md).
path = "../../../bench/harnesses/edge-bench/main.rs"

# Standalone upstream for the memory matrix (mem-matrix.sh): runs the backend in its own process so
# the proxy's RSS is measured alone (not co-mingled with the in-process upstream's buffers).
[[example]]
name = "upstream"
path = "../../../bench/harnesses/upstream/main.rs"

[features]
# Marker feature for the `edge-bench` harness: swaps in jemalloc's global allocator so the memory
# matrix can attribute hypothesis (C) — glibc arena retention — by comparing against the default
# glibc build and `MALLOC_ARENA_MAX=1`. No effect on the lib or the default build; tikv-jemallocator
# is a dev-dependency, never linked into a production build.
jemalloc = []

[dependencies]
plecto-control = { path = "../control" }
# libc: glibc `mallopt(M_ARENA_MAX)` to cap per-thread malloc arenas at startup, bounding RSS on
# many-core hosts (docs/servey body-tax). Used only on glibc targets; a no-op elsewhere.
libc = "0.2"
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# tracing-subscriber: the binary's JSON log + access-log formatter (ADR 000009 Stage A). Used only
# by `main.rs` (the lib never installs a subscriber); minimal features keep the footprint small.
tracing-subscriber = { workspace = true }
# tokio-rustls: wrap each accepted TCP stream in a TLS handshake before handing it to hyper
# (ADR 000014). The ServerConfig is built by control; this is just the async acceptor.
tokio-rustls = { workspace = true }
# quinn + h3 + h3-quinn: the independent QUIC/UDP listener that terminates HTTP/3 (ADR 000016).
# The QUIC ServerConfig's rustls (TLS1.3, ALPN h3) is built by control, sharing the cert resolver.
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }

[dev-dependencies]
# the host's test_support (TestSigner / bound_sbom / filter_hello_component) for E2E fixtures,
# and a TOML writer for the on-disk manifest a test points the server at.
plecto-host = { path = "../host" }
tempfile = "3"
# rcgen: generate a fresh self-signed cert for the TLS E2E (ring backend, no aws-lc-rs/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# tikv-jemallocator: the jemalloc build variant of the edge-bench harness (feature `jemalloc`), for
# the memory matrix's allocator sweep. Dev-only — never in a production build.
tikv-jemallocator = "0.6"
