[package]
name = "plecto-server"
description = "Plecto's fast path: an L7 reverse proxy / API gateway data plane (HTTP/1.1, HTTP/2, HTTP/3, TLS, routing, load balancing)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# The M2 fast path: a listener that drives requests through the control plane's routed filter
# chains and forwards to upstreams — HTTP/1.1 + HTTP/2 over TCP and HTTP/3 over QUIC (ADR 000013 /
# 000014 / 000015 / 000016). lib + bin + the runnable demo.
[lib]
name = "plecto_server"
path = "src/lib.rs"

[[bin]]
name = "plecto"
path = "src/main.rs"

# Runnable, use-case-focused demos live at the workspace-level `examples/` dir (a sibling of
# `crates/`), each its own `examples/<name>/main.rs`, but built as examples of this package so they
# can use plecto-server + its dev-dependencies. Run with `cargo run -p plecto-server --example <name>`.
# See examples/README.md for the guided path (start with `quickstart`).
[[example]]
name = "quickstart"
path = "../../examples/quickstart/main.rs"

[[example]]
name = "load-balancing"
path = "../../examples/load-balancing/main.rs"

[[example]]
name = "tls-http"
path = "../../examples/tls-http/main.rs"

[[example]]
name = "filter-chain"
path = "../../examples/filter-chain/main.rs"

# The real-world WASM filter showcase: a signed API-key auth component gating a route.
[[example]]
name = "wasm-auth"
path = "../../examples/wasm-auth/main.rs"

# Benchmark harness: the canonical bench server — WASM cost ladder + host rate-limit + body hook +
# WS upgrade tunnel, all on one process (see performance/README.md). Merges the former
# `wasm-bench` / `edge-bench` harnesses so the plain-HTTP/1.1 ceiling is measured exactly once.
[[example]]
name = "bench-server"
# A benchmark harness, not a learning example — it lives under bench/ (see performance/README.md),
# OUTSIDE this `plecto/` workspace directory. `required-features` keeps a plain `cargo build
# --examples` / `--all-targets` (e.g. against a standalone `plecto/` checkout, where bench/ does
# not exist) from needing that path — only an explicit `--features bench-harnesses` does.
required-features = ["bench-harnesses"]
path = "../../../bench/harnesses/bench-server/main.rs"

# Benchmark harness: endpoint-set swap under load (ADR 000044) — a SIGHUP reload changes the
# upstream's configured address set (the same shape a periodic-DNS re-resolution swap takes).
[[example]]
name = "swap-bench"
required-features = ["bench-harnesses"]
path = "../../../bench/harnesses/swap-bench/main.rs"

[[example]]
name = "hot-reload"
path = "../../examples/hot-reload/main.rs"

# Native fast-path showcases (ADR 000034 / 000023 / 000028 / 000032): canary traffic split and
# the resilience axes (retry, timeouts, circuit breaker, outlier detection).
[[example]]
name = "canary"
path = "../../examples/canary/main.rs"

[[example]]
name = "resilience"
path = "../../examples/resilience/main.rs"

# The production-shaped walkthrough: prepares a signed deploy dir, then the REAL `plecto` binary
# serves it from a manifest.toml (second terminal), with the admin endpoint scrapeable.
[[example]]
name = "production"
path = "../../examples/production/main.rs"

# Standalone upstream for the memory matrix (mem-matrix.sh): runs the backend in its own process so
# the proxy's RSS is measured alone (not co-mingled with the in-process upstream's buffers).
[[example]]
name = "upstream"
required-features = ["bench-harnesses"]
path = "../../../bench/harnesses/upstream/main.rs"

[features]
# Gates the `bench-server` / `swap-bench` / `upstream` benchmark-harness examples
# (`required-features` on each), whose `path` points outside this `plecto/` workspace directory
# into the repo-root-level `bench/`. OFF by default, so `cargo build --examples` / `--all-targets`
# never needs that sibling directory to exist — only an explicit `--features bench-harnesses`
# builds them (see performance/README.md for the full reproduction command).
bench-harnesses = []
# Marker feature for the `bench-server` harness: swaps in jemalloc's global allocator so the memory
# matrix can attribute hypothesis (C) — glibc arena retention — by comparing against the default
# glibc build and `MALLOC_ARENA_MAX=1`. No effect on the lib or the default build; tikv-jemallocator
# is a dev-dependency, never linked into a production build.
jemalloc = []

[dependencies]
plecto-control = { path = "../control" }
# libc: glibc `mallopt(M_ARENA_MAX)` to cap per-thread malloc arenas at startup, bounding RSS on
# many-core hosts (docs/servey body-tax). Used only on glibc targets; a no-op elsewhere.
libc = "0.2"
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# tracing-subscriber: the binary's JSON log + access-log formatter (ADR 000009 Stage A). Used only
# by `main.rs` (the lib never installs a subscriber); minimal features keep the footprint small.
tracing-subscriber = { workspace = true }
# tokio-rustls: wrap each accepted TCP stream in a TLS handshake before handing it to hyper
# (ADR 000014). The ServerConfig is built by control; this is just the async acceptor.
tokio-rustls = { workspace = true }
# hyper-rustls: the upstream HTTPS connector (ADR 000042). Re-encrypts the forward leg with the
# ClientConfig control built (custom CA / webpki roots) and reports the ALPN result to the legacy
# client's pool, so h2 upstreams multiplex automatically. aws_lc_rs provider (ADR 000051).
hyper-rustls = { workspace = true }
# rustls: only for `pki_types::ServerName` — the `[upstream.tls] sni` override (ADR 000050) that
# `hyper_rustls::FixedServerNameResolver` takes, overriding hyper-rustls' default (URI-host-derived)
# server name. No direct TLS use here; control builds every `ClientConfig`/`ServerConfig`.
rustls = { workspace = true }
# parking_lot: the non-poisoning read-mostly lock over the per-`[upstream.tls]`-config client
# registry (ADR 000042) — same no-poison rationale as the rest of the workspace.
parking_lot = { workspace = true }
# quinn + h3 + h3-quinn: the independent QUIC/UDP listener that terminates HTTP/3 (ADR 000016).
# The QUIC ServerConfig's rustls (TLS1.3, ALPN h3) is built by control, sharing the cert resolver.
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }

[dev-dependencies]
# the host's test_support (TestSigner / bound_sbom / filter_hello_component) for E2E fixtures,
# and a TOML writer for the on-disk manifest a test points the server at. `test-support` gates
# test_support itself and build.rs's fixture compilation (OFF by default in `[dependencies]`, so a
# plain production build of plecto-server never needs wasm32-unknown-unknown).
plecto-host = { path = "../host", features = ["test-support"] }
tempfile = "3"
# decode `plecto schema`'s stdout in the CLI E2E (ADR 000049). Dev-only.
serde_json = { workspace = true }
# OTLP decode ORACLE for the hand-written exporter's E2E (ADR 000040): the official generated
# proto types, kept independent of the shipped encoder. `gen-tonic-messages` pulls prost only —
# no tonic/gRPC stack. Dev-only, never linked into a production build.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14"
hex = { workspace = true }
parking_lot = { workspace = true }
# rcgen: generate a fresh self-signed cert for the TLS E2E (ring backend, no aws-lc-rs/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# tikv-jemallocator: the jemalloc build variant of the bench-server harness (feature `jemalloc`),
# for the memory matrix's allocator sweep. Dev-only — never in a production build.
tikv-jemallocator = "0.6"
# sha1 + base64: the RFC 6455 `Sec-WebSocket-Accept` handshake for bench-server's `/ws` mock
# upstream (ADR 000048's WS benchmark). Both are already transitive dependencies of this workspace
# (rustls / cosign stack) — no new supply-chain surface, just promoted to direct dev-deps.
sha1 = "0.10"
base64 = "0.22"
