# filter-tcp-gate — a `plecto:filter` that gates requests on a raw TCP backend reachable over the
# lent outbound TCP capability (ADR 000060). Unlike the header-only filters it imports
# `wasi:sockets` (via the `wasi` crate) and builds for wasm32-wasip2. It is the fixture for
# plecto-host's feature-gated `outbound-tcp` runtime, NOT part of the default build. Declares its
# own [workspace] so the native plecto/ workspace never absorbs it.
[package]
name = "filter-tcp-gate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58"
# Pre-generated wasi 0.2 bindings for the outbound TCP dialogue (wasi:sockets + wasi:io).
wasi = "0.14"

[workspace]
